fix: fix problem with overflow-x of country info

--- a/src/component/CountryInformation/CountryInformation.module.css
+++ b/src/component/CountryInformation/CountryInformation.module.css
@@ -1,11 +1,7 @@
 .countryWrapper {
     display: flex;
     flex-direction: column;
+    /* flex-direction: column;
     align-items: center;
-    justify-content: center;
-    width: 100%;
-}
-
-.countryInfo {
-
+    justify-content: center; */
 }
